--- a/Flicks/Flicks/Base.lproj/Main.storyboard
+++ b/Flicks/Flicks/Base.lproj/Main.storyboard
@@ -26,23 +26,28 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="1Nh-SJ-Twm">
-                                                    <rect key="frame" x="16" y="0.0" width="289" height="21"/>
+                                                    <rect key="frame" x="84" y="0.0" width="221" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="glQ-17-qsV">
-                                                    <rect key="frame" x="16" y="22" width="289" height="84.5"/>
+                                                    <rect key="frame" x="84" y="22" width="221" height="84.5"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="DKI-pp-5mm">
+                                                    <rect key="frame" x="0.0" y="-6" width="82" height="120.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="overviewLabel" destination="glQ-17-qsV" id="Xbd-Nw-5Pu"/>
+                                            <outlet property="posterView" destination="DKI-pp-5mm" id="aRz-d6-E6M"/>
                                             <outlet property="titleLabel" destination="1Nh-SJ-Twm" id="eCt-UT-fe5"/>
                                         </connections>
                                     </tableViewCell>
